Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105172

qdoc creates proxy pages without any warning

XMLWordPrintable

    • 003a78956 (dev)
    • DaVinci 123, DaVinci 124, DaVinci 125, DaVinci 126, DaVinci 127

      When qdoc encounters a relates entry which cannot be resolved to an existing page, it will create a "Proxy Page" for it (see e.g. https://doc-snapshots.qt.io/qt6-6.2/qqmlextensionplugin-proxy.html).

      As far as I can tell, those do not trigger any warnings, which could cause the doc build to fail. Given that creation of "Proxy Pages" normally is an indication of a user error (typo, forgotten namespace, ...), qdoc should at least create a warning for them – if not outright reject the creation of such pages.

        For Gerrit Dashboard: QTBUG-105172
        # Subject Branch Project Status CR V

            treinio Topi Reiniö
            fabiankosmale Fabian Kosmale
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes